--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 include AUTHORS LICENSE README.rst requirements.txt
 recursive-include tests *
 recursive-exclude * *.pyc *.swp
+recursive-exclude * __pycache__
