--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include AUTHORS LICENSE README.rst requirements.txt
-recursive-include tests *
+recursive-include netjsonconfig *
 recursive-exclude * *.pyc *.swp
 recursive-exclude * __pycache__
