Removed AUTHORS from MANIFEST

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include AUTHORS LICENSE README.rst requirements.txt
+include LICENSE README.rst requirements.txt
 recursive-include netjsonconfig *
 recursive-exclude * *.pyc *.swp
 recursive-exclude * __pycache__
