--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 
 before_script:
   - ./runflake8
-  - ./runisort
+  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then ./runisort; fi
 
 # command to run tests, e.g. python setup.py test
 script:
