[qa] Removed runflake8 & runisort in favour of setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,12 @@
 [bdist_wheel]
 universal=1
+
+[flake8]
+max-line-length=110
+max-complexity=9
+exclude=./docs/,
+        ./build/,
+        ./setup.py
+
+[isort]
+skip=setup.py
