--- a/.travis.yml
+++ b/.travis.yml
@@ -11,16 +11,15 @@ branches:
   only:
     - master
 
-# command to install requirements
+before_install:
+  - pip install -U pip setuptools wheel
+  - pip install -r requirements-test.txt
+  - flake8
+  - isort --check-only --recursive .
+
 install:
   - python setup.py -q develop
-  - pip install -r requirements-test.txt
 
-before_script:
-  - ./runflake8
-  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then ./runisort; fi
-
-# command to run tests, e.g. python setup.py test
 script:
   - nosetests --with-coverage --cover-package=netjsonconfig
 
