[qa] Improved isort configuration in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,6 @@ exclude=./docs/,
 
 [isort]
 skip=setup.py
+known_third_party=jsonschema
+known_first_party=netjsonconfig
+default_section = THIRDPARTY
