--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - python setup.py -q develop
 
 before_script:
+  - mkdir docs/source/_static
   - sphinx-build -W -b html docs/source docs/_build
 
 script:
