--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,10 @@ universal=1
 [flake8]
 max-line-length=110
 max-complexity=9
+# W503: line break before or after operator
+# W504: line break after or after operator
+# W605: invalid escape sequence
+ignore = W605, W503, W504
 exclude=./docs/,
         ./build/,
         ./setup.py
