--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ branches:
 before_install:
   - pip install -U pip setuptools wheel
   - pip install -r requirements-test.txt
+  # temporary: remove when openwisp-utils 0.5.0 is released
+  - pip install -U https://github.com/openwisp/openwisp-utils/tarball/master#egg=openwisp_utils[qa]
 
 install:
   - python setup.py -q develop
 
 before_script:
-  - openwisp-utils-qa-checks --skip-checkmigrations
-  - mkdir docs/source/_static
-  - sphinx-build -W -b html docs/source docs/_build
+  - ./run-qa-checks
 
 script:
   - nose2 --with-coverage --coverage=netjsonconfig
