--- a/setup.cfg
+++ b/setup.cfg
@@ -17,3 +17,8 @@ skip=setup.py
 known_third_party=jsonschema
 known_first_party=netjsonconfig
 default_section = THIRDPARTY
+line_length=88
+multi_line_output=3
+use_parentheses=True
+include_trailing_comma=True
+force_grid_wrap=0
