[tests] Run tests with runtests.py script

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - ./run-qa-checks
 
 script:
-  - nose2 --with-coverage --coverage=netjsonconfig
+  - coverage run -a --source=netjsonconfig runtests.py
 
 after_success:
   coveralls
