--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ python:
   - "3.6"
   - "3.7"
 
+notifications:
+  # will post a summary as comment on gihtub in case of failure
+  webhooks: https://www.travisbuddy.com/
+  on_success: never
+
 branches:
   only:
     - master
@@ -17,10 +22,9 @@ before_install:
 install:
   - python setup.py -q develop
 
-before_script:
-  - ./run-qa-checks
-
 script:
+  # check is done here to allow travis buddy to include a detailed failure summary
+  - ./run-qa-checks
   - coverage run -a --source=netjsonconfig runtests.py
 
 after_success:
