--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: Python==${{ matrix.python-version }}
+    name: Python==${{ matrix.python-version }} | ${{ matrix.django-version }}
     runs-on: ubuntu-20.04
 
     strategy:
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install python dependencies
         run: |
-          pip install -U "pip==20.2.4" wheel setuptools
+          pip install -U pip wheel setuptools
           pip install -U -r requirements-test.txt
 
       - name: Install netjsonconfig
