--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,11 @@ on:
   push:
     branches:
       - master
+      - gsoc23
   pull_request:
     branches:
       - master
+      - gsoc23
 
 jobs:
   build:
