--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,12 +46,15 @@ jobs:
         run: ./run-qa-checks
 
       - name: Tests
-        run: coverage run -a --source=netjsonconfig runtests.py
+        run: |
+          coverage run -a --source=netjsonconfig runtests.py
+          coverage xml
 
       - name: Upload Coverage
         uses: coverallsapp/github-action@v2
         with:
           parallel: true
+          format: cobertura
           flag-name: python-${{ matrix.env.env }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
 
