--- a/.github/workflows/version-branch.yml
+++ b/.github/workflows/version-branch.yml
@@ -9,4 +9,4 @@ jobs:
   version-branch:
     uses: openwisp/openwisp-utils/.github/workflows/reusable-version-branch.yml@master
     with:
-      module_name: netjsonconfig
+      module_name: netjsonconfig.version
