--- a/.github/workflows/version-branch.yml
+++ b/.github/workflows/version-branch.yml
@@ -10,3 +10,4 @@ jobs:
     uses: openwisp/openwisp-utils/.github/workflows/reusable-version-branch.yml@master
     with:
       module_name: netjsonconfig.version
+      install_package: true
