--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,10 +4,13 @@ version: 2
 formats:
   - epub
 
+build:
+  os: ubuntu-24.04
+  tools:
+    python: "3.12"
+
 python:
-  version: 3.8
   install:
     - requirements: requirements-test.txt
     - method: pip
       path: .
-  system_packages: true
