--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -3,4 +3,4 @@ coveralls
 sphinx
 openwisp-sphinx-theme~=1.0.2
 # commit message style check
-openwisp-utils[qa]~=1.2.0
+openwisp-utils[qa] @ https://github.com/openwisp/openwisp-utils/archive/refs/heads/1.3.tar.gz
